# EyeMath_protos

./: external_api_gateway.proto  generate_protos_files.py  methods.py  pyproject.toml  service_math_recognize.proto  service_math_render_pb2.py  service_math_solve.proto  service_math_solve_pb2_grpc.py
eyemath_protos/: gateway_pb2.py  gateway_pb2_grpc.py  service_math_recognize_pb2.py  service_math_recognize_pb2_grpc.py  service_math_render_pb2.py  service_math_render_pb2_grpc.py  service_math_solve_pb2.py  service_math_solve_pb2_grpc.py
eyemath_protos.egg-info/: PKG-INFO  SOURCES.txt
eyemath_protos/math_recognize/: service_math_recognize_pb2_grpc.py
eyemath_protos/math_solve/: service_math_solve_pb2.py
go/: go.mod
go/exapigate/: external_api_gateway.pb.go  external_api_gateway_grpc.pb.go
go/external_api_gateway/: go.mod  service_math_solve.pb.go
go/math_recognize/: service_math_recognize.pb.go  service_math_recognize_grpc.pb.go
go/math_solve/: service_math_solve.pb.go  service_math_solve_grpc.pb.go
go/mathsolve/: go.mod  service_math_solve.pb.go  service_math_solve_grpc.pb.go
proto/: gateway_pb2.py  service_math_render_pb2_grpc.py
protos/: service_math_recognize.proto  service_math_solve.proto
py/: setup.py
py/external_api_gateway/: external_api_gateway_pb2_grpc.py
py/mathsolve/: service_math_solve_pb2.py  service_math_solve_pb2_grpc.py
src/proto/: __init__.py
stubs/: authorizer_pb2.py  authorizer_pb2_grpc.py  gateway_pb2_grpc.py  service_math_recognize_pb2_grpc.py  service_math_render_pb2_grpc.py  service_math_solve_pb2_grpc.py
(+3 files in other folders)
