[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyemath_protos"
version = "0.3.0"
description = "gRPC protobuf files for EyeMath project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dagahan/EyeMath_protos"
"Bug Tracker" = "https://github.com/dagahan/EyeMath_protos/issues"